k8s/chattingo-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chattingo-backend-deployment
  labels:
    app: chattingo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chattingo-backend
  template:
    metadata:
      labels:
        app: chattingo-backend
    spec:
      containers:
        - name: chattingo-backend
          image:   routparesh/chattingo-backend:60d9fa9727a5eed0c1d1da19b1d74cd1fe2c63ec
          ports:
            - containerPort: 8080
