k8s/chattingo-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chattingo-frontend-deployment
  labels:
    app: chattingo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chattingo-frontend
  template:
    metadata:
      labels:
        app: chattingo-frontend
    spec:
      containers:
        - name: chattingo-frontend
          image:   routparesh/chattingo-frontend:01c07af0b9bb95f706e19a151c1915b075fe2f44
          ports:
            - containerPort: 80
