k8s/chattingo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chattingo-backend-service
spec:
  selector:
    app: chattingo-backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
