k8s/chattingo-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chattingo-db-service
spec:
  selector:
    app: chattingo-db
  ports:
    - name: http
      protocol: TCP
      port: 3306
      targetPort: 3306
