k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chattingo-backend-ingress
  namespace: chattingo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/healthcheck-port: '8080'
    alb.ingress.kubernetes.io/group.name: chattingo-group
spec:
  ingressClassName: alb
  rules:
    - host: chattingo.paresh.work
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: chattingo-backend-service
                port:
                  number: 8080
